kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventify-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.eventify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventify-api-service
                port:
                  number: 8027
    - host: ui.eventify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventify-ui-service
                port:
                  number: 80
